--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,4 +30,5 @@ dependencies {
     compile 'it.neokree:MaterialTabs:0.11'
     compile 'com.google.android.gms:play-services:6.5.87'
     compile 'com.github.navasmdc:MaterialDesign:1.+@aar'
+    compile 'com.mcxiaoke.volley:library:1.0.+@aar'
 }
