--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,7 @@
 
     <application
         android:allowBackup="true"
+        android:name=".serverConnection.ConnectionApplication"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme">
@@ -27,7 +28,9 @@
 
         <activity
             android:name="com.example.martinhudec.kwigBA.MainActivity"
-            android:label="@string/app_name">
+            android:label="@string/app_name"
+            android:screenOrientation="portrait"
+            android:configChanges="orientation|keyboardHidden">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -36,7 +39,9 @@
         </activity>
         <activity
             android:name=".stopDetail.StopDetailsActivity"
-            android:label="@string/title_activity_sub">
+            android:label="@string/title_activity_sub"
+            android:screenOrientation="portrait"
+            android:configChanges="orientation|keyboardHidden">>
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.example.martinhudec.kwigBA.MainActivity" />
