--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,4 +31,5 @@ dependencies {
     compile 'com.google.android.gms:play-services:6.5.87'
     compile 'com.github.navasmdc:MaterialDesign:1.+@aar'
     compile 'com.mcxiaoke.volley:library:1.0.+@aar'
+    compile 'com.rengwuxian.materialedittext:library:2.0.3'
 }
