--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,6 +31,9 @@
             android:label="@string/app_name"
             android:screenOrientation="portrait"
             android:configChanges="orientation|keyboardHidden">
+            <meta-data
+                android:name="android.app.default_searchable"
+                android:value=".SearchResultsActivity" />
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -42,6 +45,21 @@
             android:label="@string/title_activity_sub"
             android:screenOrientation="portrait"
             android:configChanges="orientation|keyboardHidden">>
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.example.martinhudec.kwigBA.MainActivity" />
+        </activity>
+        <activity
+            android:name=".findStop.FindStopActivity"
+            android:label="@string/title_find_stop_activity"
+            android:screenOrientation="portrait"
+            android:configChanges="orientation|keyboardHidden">>
+            <intent-filter>
+                <action android:name="android.intent.action.SEARCH" />
+            </intent-filter>
+            <meta-data
+                android:name="android.app.searchable"
+                android:resource="@xml/searchable" />
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.example.martinhudec.kwigBA.MainActivity" />
