--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,4 +34,6 @@ dependencies {
     compile 'com.github.navasmdc:MaterialDesign:1.+@aar'
     compile 'com.mcxiaoke.volley:library:1.0.+@aar'
     compile 'com.rengwuxian.materialedittext:library:2.0.3'
+    compile 'com.github.rahatarmanahmed:circularprogressview:2.0.1'
+
 }
