--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -50,8 +50,17 @@
                 android:value="com.example.martinhudec.kwigBA.MainActivity" />
         </activity>
         <activity
-            android:name=".vehicleDetail.VehicleDetailsActivity"
+            android:name=".SettingsActivity"
             android:label="@string/title_activity_sub"
+            android:screenOrientation="portrait"
+            android:configChanges="orientation|keyboardHidden">>
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.example.martinhudec.kwigBA.MainActivity" />
+        </activity>
+        <activity
+            android:name=".vehicleDetail.VehicleDetailsActivity"
+            android:label="@string/title_settings_activity"
             android:screenOrientation="portrait"
             android:configChanges="orientation|keyboardHidden">>
             <meta-data
